# Doc-parser

./: .gitignore  README.md  parse_documents.py  pyproject.toml  requirements.txt  server.py
parsers/: __init__.py  base_parser.py  lighton_parser.py
static/: index.html
static/css/: animations.css  cards.css  components.css  document.css  layout.css  modal.css  reset.css  table.css  toast.css  upload.css  variables.css
static/js/: api.js  app.js  modal.js  sse.js  state.js  toast.js  utils.js
static/js/pages/: doc-view.js  kb-list.js  kb-sources.js  models.js
