[project]
name = "doc_parser"
version = "0.1.0"
dependencies = [
    "torch>=2.11.0",        # CUDA 12.6 support starts here
    "torchvision>=0.25.0",
    "transformers>=4.50.0",
    "accelerate>=0.30.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",
    "pymupdf>=1.24.0",
    "docx2pdf>=0.1.8",
    "Pillow>=10.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "trafilatura>=1.10.0",
    "requests>=2.31.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true  

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }