[project]
name = "doc_parser"
version = "0.1.0"
dependencies = [
    "torch==2.11.0",        
    "torchvision==0.26.0",
    "transformers==5.3.0",
    "tiktoken==0.12.0",
    "accelerate==1.13.0",
    "sentencepiece==0.2.1",
    "pymupdf==1.27.2.2",
    "docx2pdf==0.1.8",
    "Pillow==12.1.1",
    "python-multipart==0.0.22",
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "trafilatura==2.0.0",
    "requests==2.32.5",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true  

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }